--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <div id="root">
-        <h1>Santhoshima is here!</h1>
-    </div>
+    <div id="root"></div>
 
 
 
