--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">Not rendered</div>
 
 
 
